@@ -17,6 +17,8 @@ and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic
 
 === added
 
+* https://github.com/docToolchain/docToolchain/issues/1230[#1230 generateSite: copy to clipboard]
+
 === changed
 
 == 3.0.0-rc1 - 2023-07-13
